# Vector-Physic-Problem

./: pyproject.toml
vector_physics/: .js  all_vectors_within_bounds.txt  third_fourth_vectors_choices.txt  vector_components.txt  vector_physics.ipynb
